crates/ruff/src/rules/flake8_import_conventions/snapshots/ruff__rules__flake8_import_conventions__tests__custom.snap
---
source: crates/ruff/src/rules/flake8_import_conventions/mod.rs
---
custom.py:3:8: ICN001 `altair` should be imported as `alt`
  |
1 | import math  # not checked
2 | 
3 | import altair  # unconventional
  |        ^^^^^^ ICN001
4 | import dask.array  # unconventional
5 | import dask.dataframe  # unconventional
  |
  = help: Alias `altair` to `alt`

custom.py:4:8: ICN001 `dask.array` should be imported as `da`
  |
3 | import altair  # unconventional
4 | import dask.array  # unconventional
  |        ^^^^^^^^^^ ICN001
5 | import dask.dataframe  # unconventional
6 | import matplotlib.pyplot  # unconventional
  |
  = help: Alias `dask.array` to `da`

custom.py:5:8: ICN001 `dask.dataframe` should be imported as `dd`
  |
3 | import altair  # unconventional
4 | import dask.array  # unconventional
5 | import dask.dataframe  # unconventional
  |        ^^^^^^^^^^^^^^ ICN001
6 | import matplotlib.pyplot  # unconventional
7 | import numpy  # unconventional
  |
  = help: Alias `dask.dataframe` to `dd`

custom.py:6:8: ICN001 `matplotlib.pyplot` should be imported as `plt`
  |
4 | import dask.array  # unconventional
5 | import dask.dataframe  # unconventional
6 | import matplotlib.pyplot  # unconventional
  |        ^^^^^^^^^^^^^^^^^ ICN001
7 | import numpy  # unconventional
8 | import pandas  # unconventional
  |
  = help: Alias `matplotlib.pyplot` to `plt`

custom.py:7:8: ICN001 `numpy` should be imported as `np`
  |
5 | import dask.dataframe  # unconventional
6 | import matplotlib.pyplot  # unconventional
7 | import numpy  # unconventional
  |        ^^^^^ ICN001
8 | import pandas  # unconventional
9 | import seaborn  # unconventional
  |
  = help: Alias `numpy` to `np`

custom.py:8:8: ICN001 `pandas` should be imported as `pd`
   |
 6 | import matplotlib.pyplot  # unconventional
 7 | import numpy  # unconventional
 8 | import pandas  # unconventional
   |        ^^^^^^ ICN001
 9 | import seaborn  # unconventional
10 | import tensorflow  # unconventional
   |
   = help: Alias `pandas` to `pd`

custom.py:9:8: ICN001 `seaborn` should be imported as `sns`
   |
 7 | import numpy  # unconventional
 8 | import pandas  # unconventional
 9 | import seaborn  # unconventional
   |        ^^^^^^^ ICN001
10 | import tensorflow  # unconventional
11 | import holoviews  # unconventional
   |
   = help: Alias `seaborn` to `sns`

custom.py:10:8: ICN001 `tensorflow` should be imported as `tf`
   |
 8 | import pandas  # unconventional
 9 | import seaborn  # unconventional
10 | import tensorflow  # unconventional
   |        ^^^^^^^^^^ ICN001
11 | import holoviews  # unconventional
12 | import panel  # unconventional
   |
   = help: Alias `tensorflow` to `tf`

custom.py:11:8: ICN001 `holoviews` should be imported as `hv`
   |
 9 | import seaborn  # unconventional
10 | import tensorflow  # unconventional
11 | import holoviews  # unconventional
   |        ^^^^^^^^^ ICN001
12 | import panel  # unconventional
13 | import plotly.express  # unconventional
   |
   = help: Alias `holoviews` to `hv`

custom.py:12:8: ICN001 `panel` should be imported as `pn`
   |
10 | import tensorflow  # unconventional
11 | import holoviews  # unconventional
12 | import panel  # unconventional
   |        ^^^^^ ICN001
13 | import plotly.express  # unconventional
14 | import matplotlib  # unconventional
   |
   = help: Alias `panel` to `pn`

custom.py:13:8: ICN001 `plotly.express` should be imported as `px`
   |
11 | import holoviews  # unconventional
12 | import panel  # unconventional
13 | import plotly.express  # unconventional
   |        ^^^^^^^^^^^^^^ ICN001
14 | import matplotlib  # unconventional
15 | import polars  # unconventional
   |
   = help: Alias `plotly.express` to `px`

custom.py:14:8: ICN001 `matplotlib` should be imported as `mpl`
   |
12 | import panel  # unconventional
13 | import plotly.express  # unconventional
14 | import matplotlib  # unconventional
   |        ^^^^^^^^^^ ICN001
15 | import polars  # unconventional
16 | import pyarrow  # unconventional
   |
   = help: Alias `matplotlib` to `mpl`

custom.py:15:8: ICN001 `polars` should be imported as `pl`
   |
13 | import plotly.express  # unconventional
14 | import matplotlib  # unconventional
15 | import polars  # unconventional
   |        ^^^^^^ ICN001
16 | import pyarrow  # unconventional
17 | import sqlalchemy  # unconventional
   |
   = help: Alias `polars` to `pl`

custom.py:16:8: ICN001 `pyarrow` should be imported as `pa`
   |
14 | import matplotlib  # unconventional
15 | import polars  # unconventional
16 | import pyarrow  # unconventional
   |        ^^^^^^^ ICN001
17 | import sqlalchemy  # unconventional
   |
   = help: Alias `pyarrow` to `pa`

custom.py:17:8: ICN001 `sqlalchemy` should be imported as `sa`
   |
15 | import polars  # unconventional
16 | import pyarrow  # unconventional
17 | import sqlalchemy  # unconventional
   |        ^^^^^^^^^^ ICN001
18 | 
19 | import altair as altr  # unconventional
   |
   = help: Alias `sqlalchemy` to `sa`

custom.py:19:18: ICN001 `altair` should be imported as `alt`
   |
17 | import sqlalchemy  # unconventional
18 | 
19 | import altair as altr  # unconventional
   |                  ^^^^ ICN001
20 | import matplotlib.pyplot as plot  # unconventional
21 | import dask.array as darray  # unconventional
   |
   = help: Alias `altair` to `alt`

custom.py:20:29: ICN001 `matplotlib.pyplot` should be imported as `plt`
   |
19 | import altair as altr  # unconventional
20 | import matplotlib.pyplot as plot  # unconventional
   |                             ^^^^ ICN001
21 | import dask.array as darray  # unconventional
22 | import dask.dataframe as ddf  # unconventional
   |
   = help: Alias `matplotlib.pyplot` to `plt`

custom.py:21:22: ICN001 `dask.array` should be imported as `da`
   |
19 | import altair as altr  # unconventional
20 | import matplotlib.pyplot as plot  # unconventional
21 | import dask.array as darray  # unconventional
   |                      ^^^^^^ ICN001
22 | import dask.dataframe as ddf  # unconventional
23 | import numpy as nmp  # unconventional
   |
   = help: Alias `dask.array` to `da`

custom.py:22:26: ICN001 `dask.dataframe` should be imported as `dd`
   |
20 | import matplotlib.pyplot as plot  # unconventional
21 | import dask.array as darray  # unconventional
22 | import dask.dataframe as ddf  # unconventional
   |                          ^^^ ICN001
23 | import numpy as nmp  # unconventional
24 | import pandas as pdas  # unconventional
   |
   = help: Alias `dask.dataframe` to `dd`

custom.py:23:17: ICN001 `numpy` should be imported as `np`
   |
21 | import dask.array as darray  # unconventional
22 | import dask.dataframe as ddf  # unconventional
23 | import numpy as nmp  # unconventional
   |                 ^^^ ICN001
24 | import pandas as pdas  # unconventional
25 | import seaborn as sbrn  # unconventional
   |
   = help: Alias `numpy` to `np`

custom.py:24:18: ICN001 `pandas` should be imported as `pd`
   |
22 | import dask.dataframe as ddf  # unconventional
23 | import numpy as nmp  # unconventional
24 | import pandas as pdas  # unconventional
   |                  ^^^^ ICN001
25 | import seaborn as sbrn  # unconventional
26 | import tensorflow as tfz  # unconventional
   |
   = help: Alias `pandas` to `pd`

custom.py:25:19: ICN001 `seaborn` should be imported as `sns`
   |
23 | import numpy as nmp  # unconventional
24 | import pandas as pdas  # unconventional
25 | import seaborn as sbrn  # unconventional
   |                   ^^^^ ICN001
26 | import tensorflow as tfz  # unconventional
27 | import holoviews as hsv  # unconventional
   |
   = help: Alias `seaborn` to `sns`

custom.py:26:22: ICN001 `tensorflow` should be imported as `tf`
   |
24 | import pandas as pdas  # unconventional
25 | import seaborn as sbrn  # unconventional
26 | import tensorflow as tfz  # unconventional
   |                      ^^^ ICN001
27 | import holoviews as hsv  # unconventional
28 | import panel as pns  # unconventional
   |
   = help: Alias `tensorflow` to `tf`

custom.py:27:21: ICN001 `holoviews` should be imported as `hv`
   |
25 | import seaborn as sbrn  # unconventional
26 | import tensorflow as tfz  # unconventional
27 | import holoviews as hsv  # unconventional
   |                     ^^^ ICN001
28 | import panel as pns  # unconventional
29 | import plotly.express as pltx  # unconventional
   |
   = help: Alias `holoviews` to `hv`

custom.py:28:17: ICN001 `panel` should be imported as `pn`
   |
26 | import tensorflow as tfz  # unconventional
27 | import holoviews as hsv  # unconventional
28 | import panel as pns  # unconventional
   |                 ^^^ ICN001
29 | import plotly.express as pltx  # unconventional
30 | import matplotlib as ml  # unconventional
   |
   = help: Alias `panel` to `pn`

custom.py:29:26: ICN001 `plotly.express` should be imported as `px`
   |
27 | import holoviews as hsv  # unconventional
28 | import panel as pns  # unconventional
29 | import plotly.express as pltx  # unconventional
   |                          ^^^^ ICN001
30 | import matplotlib as ml  # unconventional
31 | import polars as ps # unconventional
   |
   = help: Alias `plotly.express` to `px`

custom.py:30:22: ICN001 `matplotlib` should be imported as `mpl`
   |
28 | import panel as pns  # unconventional
29 | import plotly.express as pltx  # unconventional
30 | import matplotlib as ml  # unconventional
   |                      ^^ ICN001
31 | import polars as ps # unconventional
32 | import pyarrow as arr  # unconventional
   |
   = help: Alias `matplotlib` to `mpl`

custom.py:31:18: ICN001 `polars` should be imported as `pl`
   |
29 | import plotly.express as pltx  # unconventional
30 | import matplotlib as ml  # unconventional
31 | import polars as ps # unconventional
   |                  ^^ ICN001
32 | import pyarrow as arr  # unconventional
33 | import sqlalchemy as sqla  # unconventional
   |
   = help: Alias `polars` to `pl`

custom.py:32:19: ICN001 `pyarrow` should be imported as `pa`
   |
30 | import matplotlib as ml  # unconventional
31 | import polars as ps # unconventional
32 | import pyarrow as arr  # unconventional
   |                   ^^^ ICN001
33 | import sqlalchemy as sqla  # unconventional
   |
   = help: Alias `pyarrow` to `pa`

custom.py:33:22: ICN001 `sqlalchemy` should be imported as `sa`
   |
31 | import polars as ps # unconventional
32 | import pyarrow as arr  # unconventional
33 | import sqlalchemy as sqla  # unconventional
   |                      ^^^^ ICN001
34 | 
35 | import altair as alt  # conventional
   |
   = help: Alias `sqlalchemy` to `sa`


