crates/ruff/src/rules/flake8_import_conventions/snapshots/ruff__rules__flake8_import_conventions__tests__defaults.snap
---
source: crates/ruff/src/rules/flake8_import_conventions/mod.rs
---
defaults.py:3:8: ICN001 `altair` should be imported as `alt`
  |
1 | import math  # not checked
2 | 
3 | import altair  # unconventional
  |        ^^^^^^ ICN001
4 | import matplotlib.pyplot  # unconventional
5 | import numpy  # unconventional
  |
  = help: Alias `altair` to `alt`

defaults.py:4:8: ICN001 `matplotlib.pyplot` should be imported as `plt`
  |
3 | import altair  # unconventional
4 | import matplotlib.pyplot  # unconventional
  |        ^^^^^^^^^^^^^^^^^ ICN001
5 | import numpy  # unconventional
6 | import pandas  # unconventional
  |
  = help: Alias `matplotlib.pyplot` to `plt`

defaults.py:5:8: ICN001 `numpy` should be imported as `np`
  |
3 | import altair  # unconventional
4 | import matplotlib.pyplot  # unconventional
5 | import numpy  # unconventional
  |        ^^^^^ ICN001
6 | import pandas  # unconventional
7 | import seaborn  # unconventional
  |
  = help: Alias `numpy` to `np`

defaults.py:6:8: ICN001 `pandas` should be imported as `pd`
  |
4 | import matplotlib.pyplot  # unconventional
5 | import numpy  # unconventional
6 | import pandas  # unconventional
  |        ^^^^^^ ICN001
7 | import seaborn  # unconventional
8 | import sqlalchemy  # unconventional
  |
  = help: Alias `pandas` to `pd`

defaults.py:7:8: ICN001 `seaborn` should be imported as `sns`
  |
5 | import numpy  # unconventional
6 | import pandas  # unconventional
7 | import seaborn  # unconventional
  |        ^^^^^^^ ICN001
8 | import sqlalchemy  # unconventional
9 | import tkinter  # unconventional
  |
  = help: Alias `seaborn` to `sns`

defaults.py:8:8: ICN001 `sqlalchemy` should be imported as `sa`
  |
6 | import pandas  # unconventional
7 | import seaborn  # unconventional
8 | import sqlalchemy  # unconventional
  |        ^^^^^^^^^^ ICN001
9 | import tkinter  # unconventional
  |
  = help: Alias `sqlalchemy` to `sa`

defaults.py:9:8: ICN001 `tkinter` should be imported as `tk`
   |
 7 | import seaborn  # unconventional
 8 | import sqlalchemy  # unconventional
 9 | import tkinter  # unconventional
   |        ^^^^^^^ ICN001
10 | 
11 | import altair as altr  # unconventional
   |
   = help: Alias `tkinter` to `tk`

defaults.py:11:18: ICN001 `altair` should be imported as `alt`
   |
 9 | import tkinter  # unconventional
10 | 
11 | import altair as altr  # unconventional
   |                  ^^^^ ICN001
12 | import matplotlib.pyplot as plot  # unconventional
13 | import numpy as nmp  # unconventional
   |
   = help: Alias `altair` to `alt`

defaults.py:12:29: ICN001 `matplotlib.pyplot` should be imported as `plt`
   |
11 | import altair as altr  # unconventional
12 | import matplotlib.pyplot as plot  # unconventional
   |                             ^^^^ ICN001
13 | import numpy as nmp  # unconventional
14 | import pandas as pdas  # unconventional
   |
   = help: Alias `matplotlib.pyplot` to `plt`

defaults.py:13:17: ICN001 `numpy` should be imported as `np`
   |
11 | import altair as altr  # unconventional
12 | import matplotlib.pyplot as plot  # unconventional
13 | import numpy as nmp  # unconventional
   |                 ^^^ ICN001
14 | import pandas as pdas  # unconventional
15 | import seaborn as sbrn  # unconventional
   |
   = help: Alias `numpy` to `np`

defaults.py:14:18: ICN001 `pandas` should be imported as `pd`
   |
12 | import matplotlib.pyplot as plot  # unconventional
13 | import numpy as nmp  # unconventional
14 | import pandas as pdas  # unconventional
   |                  ^^^^ ICN001
15 | import seaborn as sbrn  # unconventional
16 | import sqlalchemy as sqla  # unconventional
   |
   = help: Alias `pandas` to `pd`

defaults.py:15:19: ICN001 `seaborn` should be imported as `sns`
   |
13 | import numpy as nmp  # unconventional
14 | import pandas as pdas  # unconventional
15 | import seaborn as sbrn  # unconventional
   |                   ^^^^ ICN001
16 | import sqlalchemy as sqla  # unconventional
17 | import tkinter as tkr  # unconventional
   |
   = help: Alias `seaborn` to `sns`

defaults.py:16:22: ICN001 `sqlalchemy` should be imported as `sa`
   |
14 | import pandas as pdas  # unconventional
15 | import seaborn as sbrn  # unconventional
16 | import sqlalchemy as sqla  # unconventional
   |                      ^^^^ ICN001
17 | import tkinter as tkr  # unconventional
   |
   = help: Alias `sqlalchemy` to `sa`

defaults.py:17:19: ICN001 `tkinter` should be imported as `tk`
   |
15 | import seaborn as sbrn  # unconventional
16 | import sqlalchemy as sqla  # unconventional
17 | import tkinter as tkr  # unconventional
   |                   ^^^ ICN001
18 | 
19 | import altair as alt  # conventional
   |
   = help: Alias `tkinter` to `tk`


