crates/ruff/src/rules/flake8_import_conventions/snapshots/ruff__rules__flake8_import_conventions__tests__override_default.snap
---
source: crates/ruff/src/rules/flake8_import_conventions/mod.rs
---
override_default.py:3:8: ICN001 `altair` should be imported as `alt`
  |
1 | import math  # not checked
2 | 
3 | import altair  # unconventional
  |        ^^^^^^ ICN001
4 | import matplotlib.pyplot  # unconventional
5 | import numpy  # unconventional
  |
  = help: Alias `altair` to `alt`

override_default.py:4:8: ICN001 `matplotlib.pyplot` should be imported as `plt`
  |
3 | import altair  # unconventional
4 | import matplotlib.pyplot  # unconventional
  |        ^^^^^^^^^^^^^^^^^ ICN001
5 | import numpy  # unconventional
6 | import pandas  # unconventional
  |
  = help: Alias `matplotlib.pyplot` to `plt`

override_default.py:5:8: ICN001 `numpy` should be imported as `nmp`
  |
3 | import altair  # unconventional
4 | import matplotlib.pyplot  # unconventional
5 | import numpy  # unconventional
  |        ^^^^^ ICN001
6 | import pandas  # unconventional
7 | import seaborn  # unconventional
  |
  = help: Alias `numpy` to `nmp`

override_default.py:6:8: ICN001 `pandas` should be imported as `pd`
  |
4 | import matplotlib.pyplot  # unconventional
5 | import numpy  # unconventional
6 | import pandas  # unconventional
  |        ^^^^^^ ICN001
7 | import seaborn  # unconventional
8 | import sqlalchemy  # unconventional
  |
  = help: Alias `pandas` to `pd`

override_default.py:7:8: ICN001 `seaborn` should be imported as `sns`
  |
5 | import numpy  # unconventional
6 | import pandas  # unconventional
7 | import seaborn  # unconventional
  |        ^^^^^^^ ICN001
8 | import sqlalchemy  # unconventional
  |
  = help: Alias `seaborn` to `sns`

override_default.py:8:8: ICN001 `sqlalchemy` should be imported as `sa`
   |
 6 | import pandas  # unconventional
 7 | import seaborn  # unconventional
 8 | import sqlalchemy  # unconventional
   |        ^^^^^^^^^^ ICN001
 9 | 
10 | import altair as altr  # unconventional
   |
   = help: Alias `sqlalchemy` to `sa`

override_default.py:10:18: ICN001 `altair` should be imported as `alt`
   |
 8 | import sqlalchemy  # unconventional
 9 | 
10 | import altair as altr  # unconventional
   |                  ^^^^ ICN001
11 | import matplotlib.pyplot as plot  # unconventional
12 | import numpy as np  # unconventional
   |
   = help: Alias `altair` to `alt`

override_default.py:11:29: ICN001 `matplotlib.pyplot` should be imported as `plt`
   |
10 | import altair as altr  # unconventional
11 | import matplotlib.pyplot as plot  # unconventional
   |                             ^^^^ ICN001
12 | import numpy as np  # unconventional
13 | import pandas as pdas  # unconventional
   |
   = help: Alias `matplotlib.pyplot` to `plt`

override_default.py:12:17: ICN001 `numpy` should be imported as `nmp`
   |
10 | import altair as altr  # unconventional
11 | import matplotlib.pyplot as plot  # unconventional
12 | import numpy as np  # unconventional
   |                 ^^ ICN001
13 | import pandas as pdas  # unconventional
14 | import seaborn as sbrn  # unconventional
   |
   = help: Alias `numpy` to `nmp`

override_default.py:13:18: ICN001 `pandas` should be imported as `pd`
   |
11 | import matplotlib.pyplot as plot  # unconventional
12 | import numpy as np  # unconventional
13 | import pandas as pdas  # unconventional
   |                  ^^^^ ICN001
14 | import seaborn as sbrn  # unconventional
15 | import sqlalchemy as sqla  # unconventional
   |
   = help: Alias `pandas` to `pd`

override_default.py:14:19: ICN001 `seaborn` should be imported as `sns`
   |
12 | import numpy as np  # unconventional
13 | import pandas as pdas  # unconventional
14 | import seaborn as sbrn  # unconventional
   |                   ^^^^ ICN001
15 | import sqlalchemy as sqla  # unconventional
   |
   = help: Alias `seaborn` to `sns`

override_default.py:15:22: ICN001 `sqlalchemy` should be imported as `sa`
   |
13 | import pandas as pdas  # unconventional
14 | import seaborn as sbrn  # unconventional
15 | import sqlalchemy as sqla  # unconventional
   |                      ^^^^ ICN001
16 | 
17 | import altair as alt  # conventional
   |
   = help: Alias `sqlalchemy` to `sa`


